# DungeonCrawlerEngine

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
resources/: test.txt
resources/engine/shaders/: blit.frag  blit.json  blit.vert  sprite.frag  sprite.json  sprite.vert
src/: main.cpp
src/engine/: engine.cpp  engine.h  fileio.h  game.cpp  game.h  sdl_event_dispatcher.cpp  sdl_event_dispatcher.h
src/engine/graphics/: game_window.cpp  game_window.h  graphics.cpp  graphics.h  material.cpp  material.h  quad.cpp  quad.h  render_pipeline.cpp  render_pipeline.h  render_texture.cpp  render_texture.h  shader.cpp  shader.h  sprite.cpp  sprite.h  texture.cpp  texture.h
src/engine/math/: math_types.cpp  math_types.h
src/engine/resource/: asset_manager.cpp  asset_manager.h  fileio.h  material_importer.cpp  material_importer.h  registry.cpp  registry.h  resource_management.cpp  shader_importer.cpp  shader_importer.h  texture_importer.cpp  texture_importer.h
